# fluminurs-desktop

./: Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: binaries.yml  ci.yml
resources/linux/: fluminurs-desktop.desktop
resources/osx/fluminurs-desktop.app/Contents/: Info.plist
src/: api.rs  data.rs  header.rs  main.rs  message.rs  module.rs  pages.rs  resource.rs  settings.rs  storage.rs  utils.rs
src/pages/: files.rs  loading.rs  login.rs  modules.rs  resources.rs  settings.rs
