[package]
name = "fluminurs-desktop"
version = "0.0.1"
edition = "2018"
description = "A desktop client for LumiNUS"
authors = ["Benjamin Tan <benjamin@dev.ofcr.se"]
repository = "http://github.com/bnjmnt4n/fluminurs-desktop"
readme = "README.md"
license = "MIT"

[dependencies]
chrono = "0.4"
fluminurs = { git = "https://github.com/bnjmnt4n/fluminurs", branch = "desktop" }
futures-util = "0.3"
iced = { version = "0.3", features = ["tokio"] }
open = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
